syntax = "proto3";

package appos.test.clock;
option go_package = "github.com/Season-04/appos/clock/pb";

import "google/protobuf/timestamp.proto";

service ClockService {
  rpc GetTime (GetTimeRequest) returns (GetTimeResponse);
}

message GetTimeRequest {
}

message GetTimeResponse {
  google.protobuf.Timestamp time = 1;
}
